Fixed the z-index of DatePicker

--- a/css/signup.css
+++ b/css/signup.css
@@ -2,4 +2,4 @@
 .middle_div{display: table-cell; vertical-align: middle;}
 .inner_div{margin-left: auto; margin-right: auto; max-width:500px; width:100%; padding:35px;
 			box-shadow:10px 0px 40px 0px #000000;}
-.ui-datepicker .ui-datepicker-title select{color: #000;}
+.ui-datepicker{color: #000; z-index:100 !important;}
